[gd_scene load_steps=7 format=2]

[ext_resource path="res://Font.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/sad2.svg" type="Texture" id=2]
[ext_resource path="res://assets/smile2.svg" type="Texture" id=3]
[ext_resource path="res://assets/love2.svg" type="Texture" id=4]
[ext_resource path="res://assets/meh2.svg" type="Texture" id=5]
[ext_resource path="res://FeedBackContainer.gd" type="Script" id=6]

[node name="FeedBackContainer" type="Panel"]
margin_right = 410.0
margin_bottom = 248.0
script = ExtResource( 6 )

[node name="EmoticonSelection" type="HBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -176.0
margin_top = 10.0
margin_right = 176.0
margin_bottom = 93.0

[node name="Sad" type="Button" parent="EmoticonSelection"]
margin_right = 84.0
margin_bottom = 83.0
toggle_mode = true
icon = ExtResource( 2 )

[node name="Meh" type="Button" parent="EmoticonSelection"]
margin_left = 88.0
margin_right = 172.0
margin_bottom = 83.0
icon = ExtResource( 5 )

[node name="Smile" type="Button" parent="EmoticonSelection"]
margin_left = 176.0
margin_right = 260.0
margin_bottom = 83.0
toggle_mode = true
icon = ExtResource( 3 )

[node name="Love" type="Button" parent="EmoticonSelection"]
margin_left = 264.0
margin_right = 348.0
margin_bottom = 83.0
toggle_mode = true
icon = ExtResource( 4 )

[node name="QuickFeedbackQuestion2" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -185.5
margin_top = -12.5
margin_right = 185.5
margin_bottom = 6.5
grow_horizontal = 2
custom_fonts/font = ExtResource( 1 )
text = "CommentLabel"
align = 1

[node name="Comment" type="TextEdit" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -192.0
margin_top = -104.0
margin_right = 193.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 1 )
wrap_enabled = true
caret_blink = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]
timeout = 20.0

[connection signal="pressed" from="EmoticonSelection/Sad" to="." method="_on_Sad_pressed"]
[connection signal="pressed" from="EmoticonSelection/Meh" to="." method="_on_Meh_pressed"]
[connection signal="pressed" from="EmoticonSelection/Smile" to="." method="_on_Smile_pressed"]
[connection signal="pressed" from="EmoticonSelection/Love" to="." method="_on_Love_pressed"]
